@@ -17,23 +17,21 @@
 
 #include "log-common.h"
 #include "log.h"
+#include "lml-alert.h"
 
-static plugin_log_t plugin;
 
 static int is_enabled = 0;
 static int out_stderr = 0;
+static plugin_log_t plugin;
 
-static void debug_run(const log_container_t * log)
+
+static void debug_run(const log_container_t *log)
 {
 	idmef_alert_t *alert;
-	prelude_msgbuf_t *msgbuf;
 	idmef_additional_data_t *additional;
 	idmef_message_t *message = idmef_message_new();
         
 	assert(message);
-
-	msgbuf = prelude_msgbuf_new(0);
-	assert(msgbuf);
 
 	idmef_alert_new(message);
 	alert = message->message.alert;
@@ -50,9 +48,7 @@ static void debug_run(const log_container_t * log)
 	idmef_string_set_constant(&additional->meaning, "log message");
         idmef_additional_data_set_data(additional, string, log->log, strlen(log->log) + 1);
 
-	idmef_msg_send(msgbuf, message, PRELUDE_MSG_PRIORITY_MID);
-	idmef_message_free(message);
-	prelude_msgbuf_close(msgbuf);
+	lml_emit_alert(log, message, PRELUDE_MSG_PRIORITY_LOW);
 
 	if (out_stderr)
 		fprintf(stderr, "Debug: log received, log=%s\n", log->log);
