@@ -37,6 +37,8 @@
 #include <libprelude/prelude-log.h>
 #include <libprelude/idmef-tree.h>
 #include <libprelude/idmef-tree-func.h>
+#include <libprelude/prelude-io.h>
+#include <libprelude/prelude-message.h>
 #include <libprelude/prelude-message-buffered.h>
 #include <libprelude/idmef-msg-send.h>
 #include <libprelude/prelude-io.h>
